--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,88 +1,78 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-  <!--  <table style="width: inherit;">
-        <tr>
-            <td style="display: grid;place-items: center;" >
-                <button type="submit" class="save btn btn-default">Save</button>
-            </td>
-                        <td>
-                <button type="submit" class="save btn btn-default">Save</button>
-            </td>
-                        <td>
-                <button type="submit" class="save btn btn-default">Save</button>
-            </td>
-        </tr>
-    </table> -->
-    <table class="Mangalist">
-    {% if Mangalist %}
-                {% for manga in Mangalist %}
-            {% if forloop.counter0|divisibleby:6  %}
+<p class="d-inline-flex gap-1">
+  <div class="tagFilterContainerDeactived" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+  
+    <span class="TagLabel">Tags</span>
+
+  </div>
+
+</p>
+<div class="collapse" id="collapseExample">
+    <div>
+        {% csrf_token %}
+        <table class="TagList">
+            {% if TagList %}
+                {% for tag in TagList %}
+                {% if forloop.counter0|divisibleby:6  %}
               <tr>
             {% endif %}
-            <td class="manga {% for tag in manga.tags.all %}{{ tag.getTagAsattributeClassHtml }} {% endfor %}">
-              <a href="{% url 'manga_detail' title=manga.title   %}">
-            
-                   <img class="manga" src="{{ manga.urlImage }}" >
+                                 <td class="TagElement">
+                    <button type="button" class="filterDeactived btn btn-default filter{{ tag.getTagAsattributeClassHtml }}" onclick="filter('{{ tag.getTagAsattributeClassHtml }}')">{{tag.tag}}</button>
+                </td>
 
-                <span class="titleManga">
-                    {% if manga.title|length > 25 %}
-                        {{ manga.title|truncatechars:20 }}... <br> {{manga.titleUrl}}
-                  {% else %}
-                    {{ manga.title }} <br> {{manga.titleUrl}}
-
-                   {% endif %}
-
-                </span>
-              </a>
-            </td>
-
-            {% if forloop.last and forloop.counter0|add:1|divisibleby:6 %}
-
-              </tr>
-              <tr>
-            {% endif %}
-
-            {% if forloop.last %}
-
-              <td class="addElement">
-                <a href="{% url 'manga_new' %}">
-                  <div style="width: 100%;height: 100%;box-sizing: border-box;text-align: center;top: 40%;position: relative;color:GREEN;">
-                    <i class="bi bi-patch-plus" style=" font-size: xx-large;"></i></br>Add Element
-                  </div>
-                </a>
-              </td>
-             {% endif %}
 
             {% if forloop.counter0|add:1|divisibleby:6 or forloop.last %}
               </tr>
              {% endif %}
+{% endfor %}
+{% endif %}
+        </table>
+    </div>
+</div>
 
-
-       {% endfor %}
-
-      {% else %}
-<tr>
-  <td class="addElement">
-                <a href="{% url 'manga_new' %}">
-                  <div style="width: 100%;height: 100%;box-sizing: border-box;text-align: center;top: 50%;position: relative;color:GREEN;">
-                    <i class="lni lni-plus-circle-dashed"></i> Add Element
-                  </div>
-                </a>
-              </td>
-</tr>
-      {% endif %}
-
-
-<tr>
-  {% for i in "x"|rjust:"6" %}
-<td></td>
-  {% endfor %}
-  </tr>
-    </table>
-
+<div id="tableMangaContainer">
+{% include './tableManga.html' with MangaList=Mangalist %}
+</div>
 <script>
 
+var tagsActivated = []
+
+    function filter(tag){
+
+
+
+    var manga = $(".manga")
+    var tagSelected = $(".filter"+tag);
+    var indexTag = tagsActivated.indexOf(tag)
+    console.log(indexTag)
+    if(indexTag > -1){
+        tagsActivated.splice(indexTag,1)
+        tagSelected.removeClass("filterActived");
+        tagSelected.addClass("filterDeactived");
+    }
+    else{
+        tagSelected.addClass("filterActived");
+        tagSelected.removeClass("filterDeactived");
+        tagsActivated.push(tagSelected.text())}
+        var jsonResult = JSON.stringify(tagsActivated)
+        console.log(jsonResult)
+      $.ajax({
+		url: "{% url 'tableMangaFilter' %}",
+		type: "POST",
+		data:{"filterTag":jsonResult, 'csrfmiddlewaretoken':$( "input[name='csrfmiddlewaretoken']" ).val()},
+		success: (data) => {
+
+            $("#tableMangaContainer").html(data)
+
+		},
+		error: (error) => {
+			console.log(error);
+		}
+  });
+
+}
 
 </script>
 
