--- a/blog/templates/blog/tableManga.html
+++ b/blog/templates/blog/tableManga.html
@@ -1,10 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<table class="Mangalist">
+    {% if Mangalist %}
+                {% for manga in Mangalist %}
+            {% if forloop.counter0|divisibleby:6  %}
+              <tr class="mangaRow">
+            {% endif %}
+            <td class="manga {% for tag in manga.tags.all %}{{ tag.getTagAsattributeClassHtml }} {% endfor %}">
+              <a href="{% url 'manga_detail' title=manga.title   %}">
+
+                   <img class="mangaImage" src="{{ manga.urlImage }}" ></br>
+
+                <span class="titleManga">
+                    {% if manga.title|length > 25 %}
+                        {{ manga.title|truncatechars:20 }}... <br> {{manga.lastChapter}} <br> {{manga.dateLastChapter}}
+                  {% else %}
+                    {{ manga.title }} <br> {{manga.lastChapter}} <br> {{manga.dateLastChapter}}
+
+                   {% endif %}
+
+                </span>
+              </a>
+            </td>
+
+            {% if forloop.last and forloop.counter0|add:1|divisibleby:6 %}
+                <!-- codice eseguito SOLO se addELement è primo elemento della nuova riga -->
+              </tr>
+              <tr class="mangaRow" >
+            {% endif %}
+
+            {% if forloop.last %}
+
+              <td class="addElement">
+                <a href="{% url 'manga_new' %}">
+                  <div style="width: 100%;height: 100%;box-sizing: border-box;text-align: center;top: 40%;position: relative;color:GREEN;">
+                    <i class="bi bi-patch-plus" style=" font-size: xx-large;"></i></br>Add Element
+                  </div>
+                </a>
+              </td>
+             {% endif %}
+
+            {% if forloop.counter0|add:1|divisibleby:6 or forloop.last %}
+              </tr>
+             {% endif %}
+
+
+       {% endfor %}
+
+      {% else %}
+<tr>
+  <td class="addElement">
+                <a href="{% url 'manga_new' %}">
+                  <div style="width: 100%;height: 100%;box-sizing: border-box;text-align: center;top: 50%;position: relative;color:GREEN;">
+                    <i class="lni lni-plus-circle-dashed"></i> Add Element
+                  </div>
+                </a>
+              </td>
+</tr>
+      {% endif %}
+
+
+<tr>
+  {% for i in "x"|rjust:"6" %}
+<td class="mangaImage"></td>
+  {% endfor %}
+  </tr>
+    </table>
