--- a/blog/templates/blog/menu.html
+++ b/blog/templates/blog/menu.html
@@ -79,7 +79,7 @@
                 </li>
             </ul>
             <div class="sidebar-footer">
-                <a href="#" class="sidebar-link">
+                <a href="{% url 'logoutUser' %}" class="sidebar-link">
                     <i class="lni lni-exit"></i>
                     <span>Logout</span>
                 </a>
