--- a/blog/templates/blog/menu.html
+++ b/blog/templates/blog/menu.html
@@ -5,7 +5,7 @@
                     <i class="lni lni-grid-alt"></i>
                 </button>
                 <div class="sidebar-logo">
-                    <a href="#">test Vinctusor</a>
+                    <a href="#">test {{ user.get_username }}</a>
                 </div>
             </div>
             <ul class="sidebar-nav">
@@ -16,7 +16,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="{% url 'manga_new' %}" class="sidebar-link">
+                    <a href="{% url 'addManga' %}" class="sidebar-link">
                         <i class="lni lni-book"></i>
                         <span>New Manga</span>
                     </a>
